--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,8 @@
 
     <!-- Main -->
     <main>
-      <section class="container">
-        <div class="button-elements">
+      <section>
+        <div class="container button-elements">
           <h1 class="hero-nav visually-hidden">Наші роботи</h1>
 
           <ul class="radio-button">
@@ -67,84 +67,106 @@
             </li>
           </ul>
         </div>
+      </section>
 
-        <!-- Work -->
-        <div class="work-card">
-          <ul class="work">
-            <li class="work-slide">
-              <img src="./images/portfolio1.jpg" alt="ноутбук" width="370" height="294" />
+      <!-- Work -->
+    </main>
+    <section class="section">
+      <div class="container work-card">
+        <ul class="work">
+          <li class="work-slide">
+            <img src="./images/portfolio1.jpg" alt="ноутбук" width="370" height="294" />
+            <div class="work-element">
               <h2 class="item">Технокряк</h2>
               <p class="benefits">Веб-сайт</p>
-            </li>
+            </div>
+          </li>
 
-            <li class="work-slide">
-              <img src="./images/portfolio2.jpg" alt="гра в баскетбол" width="370" height="294" />
+          <li class="work-slide">
+            <img src="./images/portfolio2.jpg" alt="гра в баскетбол" width="370" height="294" />
+            <div class="work-element">
               <h2 class="item">Постер New Orlean vs Golden Star</h2>
               <p class="benefits">Дизайн</p>
-            </li>
+            </div>
+          </li>
 
-            <li class="work-slide">
-              <img src="./images/portfolio3.jpg" alt="логотип ресторану" width="370" height="294" />
+          <li class="work-slide">
+            <img src="./images/portfolio3.jpg" alt="логотип ресторану" width="370" height="294" />
+            <div class="work-element">
               <h2 class="item">Ресторан Seafood</h2>
               <p class="benefits">Приложение</p>
-            </li>
+            </div>
+          </li>
 
-            <li class="work-slide">
-              <img src="./images/portfolio4.jpg" alt="навушники" width="370" height="294" />
+          <li class="work-slide">
+            <img src="./images/portfolio4.jpg" alt="навушники" width="370" height="294" />
+            <div class="work-element">
               <h2 class="item">Проект Prime</h2>
               <p class="benefits">Маркетинг</p>
-            </li>
+            </div>
+          </li>
 
-            <li class="work-slide">
-              <img src="./images/portfolio5.jpg" alt="дві коробки" width="370" height="294" />
+          <li class="work-slide">
+            <img src="./images/portfolio5.jpg" alt="дві коробки" width="370" height="294" />
+            <div class="work-element">
               <h2 class="item">Проект Boxes</h2>
               <p class="benefits">Приложение</p>
-            </li>
+            </div>
+          </li>
 
-            <li class="work-slide">
-              <img src="./images/portfolio6.jpg" alt="монітор" width="370" height="294" />
+          <li class="work-slide">
+            <img src="./images/portfolio6.jpg" alt="монітор" width="370" height="294" />
+            <div class="work-element">
               <h2 class="item">Inspiration has no Borders</h2>
               <p class="benefits">Веб-сайт</p>
-            </li>
+            </div>
+          </li>
 
-            <li class="work-slide">
-              <img src="./images/portfolio7.jpg" alt="книга" width="370" height="294" />
+          <li class="work-slide">
+            <img src="./images/portfolio7.jpg" alt="книга" width="370" height="294" />
+            <div class="work-element">
               <h2 class="item">Издание Limited Edition</h2>
               <p class="benefits">Дизайн</p>
-            </li>
+            </div>
+          </li>
 
-            <li class="work-slide">
-              <img src="./images/portfolio8.jpg" alt="бірка" width="370" height="294" />
+          <li class="work-slide">
+            <img src="./images/portfolio8.jpg" alt="бірка" width="370" height="294" />
+            <div class="work-element">
               <h2 class="item">Проект LAB</h2>
               <p class="benefits">Маркетинг</p>
-            </li>
+            </div>
+          </li>
 
-            <li class="work-slide">
-              <img src="./images/portfolio9.jpg" alt="ноутбук" width="370" height="294" />
+          <li class="work-slide">
+            <img src="./images/portfolio9.jpg" alt="ноутбук" width="370" height="294" />
+            <div class="work-element">
               <h2 class="item">Growing Business</h2>
               <p class="benefits">Приложение</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
 
     <!-- Footer -->
     <footer>
-      <div class="container">
-        <a href="index.html" class="logo down"><span class="slogan">Web</span>Studio</a>
-        <address class="address-nav">
-          <p class="contact">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul>
-            <li class="address-link">
-              <a class="link mail" href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li class="address-link">
-              <a class="link tel" href="tel:+380991111111">+38 096 111 11 111</a>
-            </li>
-          </ul>
-        </address>
-      </div>
+      <section class="section-footer">
+        <div class="container">
+          <a href="index.html" class="logo down"><span class="slogan">Web</span>Studio</a>
+          <address class="address-nav">
+            <p class="contact">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="conection">
+              <li class="address-mail">
+                <a class="link mail" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="address-tel">
+                <a class="link tel" href="tel:+380991111111">+38 096 111 11 111</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
