забрав падінги на h1, марджин між секціями

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
     <!-- Main -->
     <main>
       <section class="section">
-        <div class="container button-elements">
+        <div class="container portfolio">
           <h1 class="hero-nav visually-hidden">Наші роботи</h1>
 
           <ul class="radio-button">
@@ -66,10 +66,9 @@
               <button class="navigation" type="button">Маркетинг</button>
             </li>
           </ul>
-        </div>
 
-        <!-- Work -->
-        <div class="container work-card">
+          <!-- Work -->
+
           <ul class="work">
             <li class="work-slide">
               <img src="./images/portfolio1.jpg" alt="ноутбук" width="370" height="294" />
