Добавив верхній падинг для секції у Портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 
     <!-- Main -->
     <main>
-      <section class="section">
+      <section class="section portfolio">
         <div class="container portfolio">
           <h1 class="hero-nav visually-hidden">Наші роботи</h1>
 
